[package]
name        = "flywheelmc-logging"
version     = "0.1.0"
authors     = ["FlywheelMC <https://github.com/FlywheelMC>"]
description = "FlywheelMC logging"
license     = "LGPL-3.0-only"

readme     = "README.md"
homepage   = "https://github.com/FlywheelMC"
repository = "https://github.com/FlywheelMC/flywheelmc-logging"
publish    = false

keywords   = [ "flywheel", "mc", "minecraft", "game" ]
categories = [ "development-tools::debugging" ]

edition      = "2024"
rust-version = "1.87"


[dependencies.inventory]
version = "0.3"
[dependencies.const-str]
version = "0.6"


[dependencies.chrono]
version = "0.4"

[dependencies.colored]
version = "3.0"


[lints.rust]
unused_parens = "allow"
